[gd_scene load_steps=2 format=3 uid="uid://btek7cvhlsdhm"]

[ext_resource type="Script" path="res://navigationbuttons.gd" id="1_3w7c1"]

[node name="NavigationButtons" type="CanvasLayer"]
script = ExtResource("1_3w7c1")

[node name="Wardrobe" type="Button" parent="."]
offset_left = 338.0
offset_top = 176.0
offset_right = 346.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 24
text = "Change Scene to
\"Wardrobe\""

[node name="Home" type="Button" parent="."]
offset_left = 334.0
offset_top = 386.0
offset_right = 532.0
offset_bottom = 462.0
theme_override_font_sizes/font_size = 24
text = "Change Scene to
\"Home\""

[node name="Interact" type="Button" parent="."]
offset_left = 352.0
offset_top = 602.0
offset_right = 550.0
offset_bottom = 678.0
theme_override_font_sizes/font_size = 24
text = "Change Scene to
\"Feed\""

[node name="Shop" type="Button" parent="."]
offset_left = 328.0
offset_top = 818.0
offset_right = 526.0
offset_bottom = 894.0
theme_override_font_sizes/font_size = 24
text = "Change Scene to
\"Shop\""

[connection signal="pressed" from="Wardrobe" to="." method="_on_wardrobe_pressed"]
[connection signal="pressed" from="Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Interact" to="." method="_on_interact_pressed"]
[connection signal="pressed" from="Shop" to="." method="_on_shop_pressed"]
